--- a/my-account-personal-info.html
+++ b/my-account-personal-info.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Account</title>
+    <title>My Account - Personal Info</title>
     <link rel="stylesheet" href="css/lib/bootstrap-grid.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/swiper.css">
@@ -118,8 +118,8 @@
         <div class="breadcrumbs">
             <div class="container">
                 <ul>
-                    <li><a href="#">Home </a></li>
-                    <li>My Account</li>
+                    <li><a href="#">My Account</a></li>
+                    <li>Personal Info</li>
                 </ul>
             </div>
         </div>
@@ -140,7 +140,7 @@
                                 <div class="accountsidebar__box">
                                     <p class="title">My Account</p>
                                     <ul>
-                                        <li>
+                                        <li class="active">
                                             <a href="#">
                                                 <span class="icwrap">
                                                     <img src="img/account/acc-personalinfo.svg" alt="icon">
@@ -228,210 +228,69 @@
                     </div>
                     <div class="accountsection-colright">
                         <div class="accountcontent">
-                            <p class="accountcontent__title">Congratulations, Arsen Struk!</p>
-
                             <div class="acccontentsect">
-                                <div class="acccontentsect__header">
-                                    <p>
-                                        <img src="img/account/accsect-ic1.svg" alt="img">
-                                        Recent Orders
-                                    </p>
-                                    <span class="togglebtn">
-                                        <img src="img/account/accsect-arrow.svg" alt="arrow">
-                                    </span>
-                                </div>
-                                <div class="acccontentsect__body">
-                                    <div class="row">
-                                        <div class="col-xl-3 col-md-6">
-                                            <div class="acc-orderbox">
-                                                <p class="ordernum">Order No. 517547571</p>
-                                                <p class="orderstatus">
-                                                    Delivered
-                                                </p>
-                                                <p class="delivdate">Delivered on April 13, 2023</p>
-                                                <div class="delivproducts">
-                                                    <div class="delivproduct">
-                                                        <img src="img/account/delivprod1.png" alt="img">
-                                                    </div>
-                                                    <div class="delivproduct">
-                                                        <img src="img/account/delivprod2.png" alt="img">
-                                                    </div>
-                                                    <div class="delivproduct">
-                                                        <img src="img/account/delivprod3.png" alt="img">
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-6">
-                                            <div class="acc-orderbox">
-                                                <p class="ordernum">Order No. 517547572</p>
-                                                <p class="orderstatus">
-                                                    Delivered
-                                                </p>
-                                                <p class="delivdate">Delivered on April 16, 2023</p>
-                                                <div class="delivproducts">
-                                                    <div class="delivproduct">
-                                                        <img src="img/account/delivprod4.png" alt="img">
-                                                    </div>
-                                                    <div class="delivproduct">
-                                                        <img src="img/account/delivprod5.png" alt="img">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-6">
-                                            <div class="acc-orderbox">
-                                                <p class="ordernum">Order No. 517547573</p>
-                                                <p class="orderstatus">
-                                                    Delivered
-                                                </p>
-                                                <p class="delivdate">Delivered on April 20, 2023</p>
-                                                <div class="delivproducts">
-                                                    <div class="delivproduct">
-                                                        <img src="img/account/delivprod6.png" alt="img">
-                                                    </div>
-                                                    <div class="delivproduct">
-                                                        <img src="img/account/delivprod7.png" alt="img">
-                                                    </div>
-                                                    <div class="delivproduct">
-                                                        <img src="img/account/delivprod8.png" alt="img">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-6">
-                                            <div class="acc-orderbox">
-                                                <p class="ordernum">Order No. 517547574</p>
-                                                <p class="orderstatus">
-                                                    Delivered
-                                                </p>
-                                                <p class="delivdate">Delivered on April 25, 2023</p>
-                                                <div class="delivproducts">
-                                                    <div class="delivproduct">
-                                                        <img src="img/account/delivprod9.png" alt="img">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="acccontentsect">
-                                <div class="acccontentsect__header">
-                                    <p>
-                                        <img src="img/account/accsect-ic2.svg" alt="img">
-                                        My Credit cards
-                                        <span>Learn more about <a href="#">payment methods</a> we accept.</span>
-                                    </p>
-                                    <span class="togglebtn">
-                                        <img src="img/account/accsect-arrow.svg" alt="arrow">
-                                    </span>
-                                </div>
-                                <div class="acccontentsect__body">
-                                    <div class="row">
-                                        <div class="col-xl-3 col-md-12">
-                                            <div class="acc-creditbox">
-                                                <p class="title">Credit/debit card</p>
-                                                <div class="cardswrap">
-                                                    <a href="#" class="card">
-                                                        <img src="img/account/card-1.png" alt="card">
-                                                    </a>
-                                                    <a href="#" class="card">
-                                                        <img src="img/account/card-2.png" alt="card">
-                                                    </a>
-                                                    <a href="#" class="card">
-                                                        <img src="img/account/card-3.png" alt="card">
-                                                    </a>
-                                                    <a href="#" class="card">
-                                                        <img src="img/account/card-3.png" alt="card">
-                                                    </a>
-                                                    <a href="#" class="card">
-                                                        <img src="img/account/card-4.png" alt="card">
-                                                    </a>
-                                                    <a href="#" class="card">
-                                                        <img src="img/account/card-5.png" alt="card">
-                                                    </a>
-                                                    <a href="#" class="card">
-                                                        <img src="img/account/card-6.png" alt="card">
-                                                    </a>
-                                                    <a href="#" class="card">
-                                                        <img src="img/account/card-7.png" alt="card">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-6">
-                                            <div class="acc-creditbox acc-creditbox__solo">
-                                                <p class="title">PayPal</p>
-                                                <a href="#">
-                                                    <div class="solocard">
-                                                        <img src="img/account/paypal.svg" alt="img">
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-6">
-                                            <div class="acc-creditbox acc-creditbox__solo">
-                                                <p class="title">Apple Pay</p>
-                                                <a href="#">
-                                                    <div class="solocard">
-                                                        <img src="img/account/apple-pay.svg" alt="img">
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="acccontentsect">
-                                <div class="acccontentsect__header">
+                                <div class="acccontentsect__header acccontentsect__header-delacc">
                                     <p>
                                         <img src="img/account/accsect-ic3.svg" alt="img">
                                         Personal info
                                     </p>
-                                    <span class="togglebtn">
-                                        <img src="img/account/accsect-arrow.svg" alt="arrow">
+                                    <span class="deleteacc">
+                                        <a href="#">
+                                            <img src="img/header/delete-icon.svg" alt="remove">
+                                            Delete your Food account
+                                        </a>
                                     </span>
                                 </div>
 
-                                <div class="acccontentsect__body">
-                                    <div class="row">
-                                        <div class="col-xl-4 col-lg-12">
-                                            <div class="personalinfobox">
-                                                <div class="personalinfobox__left">
-                                                    <p class="title">Full name</p>
-                                                    <input type="text" value="Sofiia Struk">
-                                                </div>
-                                                <div class="personalinfobox__right">
-                                                    <a href="#">Edit</a>
-                                                </div>
+                                <div class="acccontentsect__body personalinfo">
+                                    <div class="accpersonalinfosect">
+                                        <div class="personalinfobox">
+                                            <div class="personalinfobox__left">
+                                                <p class="title">Full name</p>
+                                                <input type="text" value="Sofiia Struk">
+                                            </div>
+                                            <div class="personalinfobox__right">
+                                                <a href="#">Edit</a>
                                             </div>
                                         </div>
-                                        <div class="col-xl-4 col-lg-12">
-                                            <div class="personalinfobox">
-                                                <div class="personalinfobox__left">
-                                                    <p class="title">Email</p>
-                                                    <input type="text" value="s***8@gmail.com">
-                                                </div>
-                                                <div class="personalinfobox__right">
-                                                    <a href="#">Edit</a>
-                                                </div>
+                                        <div class="personalinfobox">
+                                            <div class="personalinfobox__left">
+                                                <p class="title">Email</p>
+                                                <input type="text" value="struk.arsen888@gmail.com">
+                                            </div>
+                                            <div class="personalinfobox__right">
+                                                <a href="#">Edit</a>
                                             </div>
                                         </div>
-                                        <div class="col-xl-4 col-lg-12">
-                                            <div class="personalinfobox">
-                                                <div class="personalinfobox__left">
-                                                    <p class="title">Mobile number</p>
-                                                    <input type="text" value="35 *** 667 ***">
-                                                </div>
-                                                <div class="personalinfobox__right">
-                                                    <a href="#">Edit</a>
-                                                </div>
+                                        <div class="personalinfobox">
+                                            <div class="personalinfobox__left">
+                                                <p class="title">Mobile number</p>
+                                                <input type="text" value="35 566 667 444">
+                                            </div>
+                                            <div class="personalinfobox__right">
+                                                <a href="#">Edit</a>
                                             </div>
                                         </div>
+                                        <div class="personalinfobox">
+                                            <div class="personalinfobox__left">
+                                                <p class="title">Password</p>
+                                                <input type="password" value="35 566 667 444">
+                                            </div>
+                                            <div class="personalinfobox__right">
+                                                <a href="#">Edit</a>
+                                            </div>
+                                        </div>
+                                        <div class="personalinfobox">
+                                            <div class="personalinfobox__left">
+                                                <p class="title">Country/region & language</p>
+                                                <input type="text" value="English">
+                                            </div>
+                                            <div class="personalinfobox__right">
+                                                <a href="#">Edit</a>
+                                            </div>
+                                        </div>
+
+
                                     </div>
                                 </div>
                             </div>
@@ -441,6 +300,7 @@
                 </div>
             </div>
         </section>
+
     </main>
 
     <footer class="footer">
@@ -507,7 +367,6 @@
             </div>
         </div>
     </footer>
-
 
 
     <script src="js/lib/jquery.js"></script>
