--- a/sitemap.html
+++ b/sitemap.html
@@ -40,6 +40,9 @@
         </ul>
         <ul>
             <li><a href="my-account.html" target="_blank">My Account</a></li>
+            <li><a href="my-account-personal-info.html" target="_blank">My Account - Personal Info</a></li>
+            <li><a href="my-account-my-address.html" target="_blank">My Account - My Address</a></li>
+            
         </ul>
     </div>
 
